[package]
name = "softheap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14"
proptest = "1.7"
rand = "0.9.1"
random = "0.14.0"
seq-macro = "0.3.6"
rayon = "1.8"

[profile.test]
lto = "thin"
opt-level = 3
